--- a/Rodgort/ClientApp/package.json
+++ b/Rodgort/ClientApp/package.json
@@ -23,30 +23,32 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/router": "^5.2.10",
     "angular-highcharts": "^7.0.2",
-    "highcharts": "^6.2.0",
     "core-js": "^2.5.6",
-    "node-sass": "^4.9.0",
+    "highcharts": "^6.2.0",
+    "node-sass": "^4.11.0",
     "rxjs": "^5.5.10",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.4",
     "@angular/compiler-cli": "^5.2.10",
     "@angular/flex-layout": "2.0.0-beta.10",
     "@angular/language-service": "^5.2.10",
+    "@types/highcharts": "^5.0.33",
     "@types/jasmine": "^2.8.7",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.110",
-    "@types/highcharts": "^5.0.33",
     "codelyzer": "^4.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
